1.1.0:
 - large file transfer Tuning

1.0.1:
 - add spec file   (support/makuosan.spec)
 - add init script (support/makuosan.sysv)
 - support for FreeBSD & MacOSX

1.0.0:
 - stable release
 - change default value -f option. 1 to 3
 - fixed group missmatch
 - fixed statcomp bug
 - fixed dir perm bug
 - add -G option
 - autoconf check openssl header file 

0.9.3:
 - change msync command design.
 - fixed daemonize error message.

0.9.2: 
 - block device transfer support
 - character device transfer support
 - fifo transfer support

0.9.1:
 - Document write
 - fixed encrypt function
 - fixed console password function
 - create msync command

0.9.0beta:
 - initial release